parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EOF

Grammar

Rule 0     S' -> LATEX
Rule 1     LATEX -> EXPR
Rule 2     STRING -> CHARACTER
Rule 3     STRING -> CHARACTER STRING
Rule 4     PHRASE -> CHARACTER
Rule 5     PHRASE -> BRACE_PHRASE
Rule 6     PHRASE -> BOLD_PHRASE
Rule 7     PHRASE -> MONOSPACE_PHRASE
Rule 8     PHRASE -> ITALIC_PHRASE
Rule 9     PHRASE -> UNDERSCORE_PHRASE
Rule 10    BRACE_PHRASE -> LEFT_BRACE EXPR RIGHT_BRACE
Rule 11    BOLD_PHRASE -> BOLD PHRASE
Rule 12    MONOSPACE_PHRASE -> MONOSPACE PHRASE
Rule 13    ITALIC_PHRASE -> ITALIC PHRASE
Rule 14    UNDERSCORE_PHRASE -> UNDERSCORE PHRASE
Rule 15    EXPR_LIST -> EXPR
Rule 16    EXPR_LIST -> EXPR EXPR_LIST
Rule 17    EXPR -> EXPR_LIST
Rule 18    EXPR -> BEGIN_EXPR
Rule 19    EXPR -> STRING
Rule 20    EXPR -> PHRASE
Rule 21    EXPR -> MATH
Rule 22    EXPR -> INPUT_FILE_EXPR
Rule 23    EXPR -> OUTPUT_FILE_EXPR
Rule 24    BEGIN_EXPR -> BEGIN BRACE_PHRASE_LIST_FOR_BEGIN
Rule 25    INPUT_FILE_EXPR -> INPUT_FILE
Rule 26    OUTPUT_FILE_EXPR -> OUTPUT_FILE
Rule 27    BRACE_PHRASE_LIST_FOR_BEGIN -> BRACE_PHRASE BRACE_PHRASE
Rule 28    BRACE_PHRASE_LIST_FOR_BEGIN -> BRACE_PHRASE BRACE_PHRASE BRACE_PHRASE_LIST_FOR_BEGIN
Rule 29    MATH -> DOLLAR MATH_STRING DOLLAR
Rule 30    MATH_STRING -> STRING
Rule 31    MATH_STRING -> UNDERSCORE
Rule 32    MATH_STRING -> MATH_STRING MATH_STRING

Terminals, with rules where they appear

BEGIN                : 24
BOLD                 : 11
CHARACTER            : 2 3 4
DOLLAR               : 29 29
EOF                  : 
INPUT_FILE           : 25
ITALIC               : 13
LEFT_BRACE           : 10
MONOSPACE            : 12
OUTPUT_FILE          : 26
RIGHT_BRACE          : 10
UNDERSCORE           : 14 31
error                : 

Nonterminals, with rules where they appear

BEGIN_EXPR           : 18
BOLD_PHRASE          : 6
BRACE_PHRASE         : 5 27 27 28 28
BRACE_PHRASE_LIST_FOR_BEGIN : 24 28
EXPR                 : 1 10 15 16
EXPR_LIST            : 16 17
INPUT_FILE_EXPR      : 22
ITALIC_PHRASE        : 8
LATEX                : 0
MATH                 : 21
MATH_STRING          : 29 32 32
MONOSPACE_PHRASE     : 7
OUTPUT_FILE_EXPR     : 23
PHRASE               : 11 12 13 14 20
STRING               : 3 19 30
UNDERSCORE_PHRASE    : 9

Parsing method: LALR

state 0

    (0) S' -> . LATEX
    (1) LATEX -> . EXPR
    (17) EXPR -> . EXPR_LIST
    (18) EXPR -> . BEGIN_EXPR
    (19) EXPR -> . STRING
    (20) EXPR -> . PHRASE
    (21) EXPR -> . MATH
    (22) EXPR -> . INPUT_FILE_EXPR
    (23) EXPR -> . OUTPUT_FILE_EXPR
    (15) EXPR_LIST -> . EXPR
    (16) EXPR_LIST -> . EXPR EXPR_LIST
    (24) BEGIN_EXPR -> . BEGIN BRACE_PHRASE_LIST_FOR_BEGIN
    (2) STRING -> . CHARACTER
    (3) STRING -> . CHARACTER STRING
    (4) PHRASE -> . CHARACTER
    (5) PHRASE -> . BRACE_PHRASE
    (6) PHRASE -> . BOLD_PHRASE
    (7) PHRASE -> . MONOSPACE_PHRASE
    (8) PHRASE -> . ITALIC_PHRASE
    (9) PHRASE -> . UNDERSCORE_PHRASE
    (29) MATH -> . DOLLAR MATH_STRING DOLLAR
    (25) INPUT_FILE_EXPR -> . INPUT_FILE
    (26) OUTPUT_FILE_EXPR -> . OUTPUT_FILE
    (10) BRACE_PHRASE -> . LEFT_BRACE EXPR RIGHT_BRACE
    (11) BOLD_PHRASE -> . BOLD PHRASE
    (12) MONOSPACE_PHRASE -> . MONOSPACE PHRASE
    (13) ITALIC_PHRASE -> . ITALIC PHRASE
    (14) UNDERSCORE_PHRASE -> . UNDERSCORE PHRASE

    BEGIN           shift and go to state 10
    CHARACTER       shift and go to state 11
    DOLLAR          shift and go to state 17
    INPUT_FILE      shift and go to state 18
    OUTPUT_FILE     shift and go to state 19
    LEFT_BRACE      shift and go to state 20
    BOLD            shift and go to state 21
    MONOSPACE       shift and go to state 22
    ITALIC          shift and go to state 23
    UNDERSCORE      shift and go to state 24

    LATEX                          shift and go to state 1
    EXPR                           shift and go to state 2
    EXPR_LIST                      shift and go to state 3
    BEGIN_EXPR                     shift and go to state 4
    STRING                         shift and go to state 5
    PHRASE                         shift and go to state 6
    MATH                           shift and go to state 7
    INPUT_FILE_EXPR                shift and go to state 8
    OUTPUT_FILE_EXPR               shift and go to state 9
    BRACE_PHRASE                   shift and go to state 12
    BOLD_PHRASE                    shift and go to state 13
    MONOSPACE_PHRASE               shift and go to state 14
    ITALIC_PHRASE                  shift and go to state 15
    UNDERSCORE_PHRASE              shift and go to state 16

state 1

    (0) S' -> LATEX .



state 2

    (1) LATEX -> EXPR .
    (15) EXPR_LIST -> EXPR .
    (16) EXPR_LIST -> EXPR . EXPR_LIST
    (15) EXPR_LIST -> . EXPR
    (16) EXPR_LIST -> . EXPR EXPR_LIST
    (17) EXPR -> . EXPR_LIST
    (18) EXPR -> . BEGIN_EXPR
    (19) EXPR -> . STRING
    (20) EXPR -> . PHRASE
    (21) EXPR -> . MATH
    (22) EXPR -> . INPUT_FILE_EXPR
    (23) EXPR -> . OUTPUT_FILE_EXPR
    (24) BEGIN_EXPR -> . BEGIN BRACE_PHRASE_LIST_FOR_BEGIN
    (2) STRING -> . CHARACTER
    (3) STRING -> . CHARACTER STRING
    (4) PHRASE -> . CHARACTER
    (5) PHRASE -> . BRACE_PHRASE
    (6) PHRASE -> . BOLD_PHRASE
    (7) PHRASE -> . MONOSPACE_PHRASE
    (8) PHRASE -> . ITALIC_PHRASE
    (9) PHRASE -> . UNDERSCORE_PHRASE
    (29) MATH -> . DOLLAR MATH_STRING DOLLAR
    (25) INPUT_FILE_EXPR -> . INPUT_FILE
    (26) OUTPUT_FILE_EXPR -> . OUTPUT_FILE
    (10) BRACE_PHRASE -> . LEFT_BRACE EXPR RIGHT_BRACE
    (11) BOLD_PHRASE -> . BOLD PHRASE
    (12) MONOSPACE_PHRASE -> . MONOSPACE PHRASE
    (13) ITALIC_PHRASE -> . ITALIC PHRASE
    (14) UNDERSCORE_PHRASE -> . UNDERSCORE PHRASE

  ! reduce/reduce conflict for $end resolved using rule 1 (LATEX -> EXPR .)
  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for CHARACTER resolved as shift
  ! shift/reduce conflict for DOLLAR resolved as shift
  ! shift/reduce conflict for INPUT_FILE resolved as shift
  ! shift/reduce conflict for OUTPUT_FILE resolved as shift
  ! shift/reduce conflict for LEFT_BRACE resolved as shift
  ! shift/reduce conflict for BOLD resolved as shift
  ! shift/reduce conflict for MONOSPACE resolved as shift
  ! shift/reduce conflict for ITALIC resolved as shift
  ! shift/reduce conflict for UNDERSCORE resolved as shift
    $end            reduce using rule 1 (LATEX -> EXPR .)
    BEGIN           shift and go to state 10
    CHARACTER       shift and go to state 11
    DOLLAR          shift and go to state 17
    INPUT_FILE      shift and go to state 18
    OUTPUT_FILE     shift and go to state 19
    LEFT_BRACE      shift and go to state 20
    BOLD            shift and go to state 21
    MONOSPACE       shift and go to state 22
    ITALIC          shift and go to state 23
    UNDERSCORE      shift and go to state 24

  ! BEGIN           [ reduce using rule 15 (EXPR_LIST -> EXPR .) ]
  ! CHARACTER       [ reduce using rule 15 (EXPR_LIST -> EXPR .) ]
  ! DOLLAR          [ reduce using rule 15 (EXPR_LIST -> EXPR .) ]
  ! INPUT_FILE      [ reduce using rule 15 (EXPR_LIST -> EXPR .) ]
  ! OUTPUT_FILE     [ reduce using rule 15 (EXPR_LIST -> EXPR .) ]
  ! LEFT_BRACE      [ reduce using rule 15 (EXPR_LIST -> EXPR .) ]
  ! BOLD            [ reduce using rule 15 (EXPR_LIST -> EXPR .) ]
  ! MONOSPACE       [ reduce using rule 15 (EXPR_LIST -> EXPR .) ]
  ! ITALIC          [ reduce using rule 15 (EXPR_LIST -> EXPR .) ]
  ! UNDERSCORE      [ reduce using rule 15 (EXPR_LIST -> EXPR .) ]
  ! $end            [ reduce using rule 15 (EXPR_LIST -> EXPR .) ]

    EXPR                           shift and go to state 25
    EXPR_LIST                      shift and go to state 26
    BEGIN_EXPR                     shift and go to state 4
    STRING                         shift and go to state 5
    PHRASE                         shift and go to state 6
    MATH                           shift and go to state 7
    INPUT_FILE_EXPR                shift and go to state 8
    OUTPUT_FILE_EXPR               shift and go to state 9
    BRACE_PHRASE                   shift and go to state 12
    BOLD_PHRASE                    shift and go to state 13
    MONOSPACE_PHRASE               shift and go to state 14
    ITALIC_PHRASE                  shift and go to state 15
    UNDERSCORE_PHRASE              shift and go to state 16

state 3

    (17) EXPR -> EXPR_LIST .

    BEGIN           reduce using rule 17 (EXPR -> EXPR_LIST .)
    CHARACTER       reduce using rule 17 (EXPR -> EXPR_LIST .)
    DOLLAR          reduce using rule 17 (EXPR -> EXPR_LIST .)
    INPUT_FILE      reduce using rule 17 (EXPR -> EXPR_LIST .)
    OUTPUT_FILE     reduce using rule 17 (EXPR -> EXPR_LIST .)
    LEFT_BRACE      reduce using rule 17 (EXPR -> EXPR_LIST .)
    BOLD            reduce using rule 17 (EXPR -> EXPR_LIST .)
    MONOSPACE       reduce using rule 17 (EXPR -> EXPR_LIST .)
    ITALIC          reduce using rule 17 (EXPR -> EXPR_LIST .)
    UNDERSCORE      reduce using rule 17 (EXPR -> EXPR_LIST .)
    $end            reduce using rule 17 (EXPR -> EXPR_LIST .)
    RIGHT_BRACE     reduce using rule 17 (EXPR -> EXPR_LIST .)


state 4

    (18) EXPR -> BEGIN_EXPR .

    BEGIN           reduce using rule 18 (EXPR -> BEGIN_EXPR .)
    CHARACTER       reduce using rule 18 (EXPR -> BEGIN_EXPR .)
    DOLLAR          reduce using rule 18 (EXPR -> BEGIN_EXPR .)
    INPUT_FILE      reduce using rule 18 (EXPR -> BEGIN_EXPR .)
    OUTPUT_FILE     reduce using rule 18 (EXPR -> BEGIN_EXPR .)
    LEFT_BRACE      reduce using rule 18 (EXPR -> BEGIN_EXPR .)
    BOLD            reduce using rule 18 (EXPR -> BEGIN_EXPR .)
    MONOSPACE       reduce using rule 18 (EXPR -> BEGIN_EXPR .)
    ITALIC          reduce using rule 18 (EXPR -> BEGIN_EXPR .)
    UNDERSCORE      reduce using rule 18 (EXPR -> BEGIN_EXPR .)
    $end            reduce using rule 18 (EXPR -> BEGIN_EXPR .)
    RIGHT_BRACE     reduce using rule 18 (EXPR -> BEGIN_EXPR .)


state 5

    (19) EXPR -> STRING .

    BEGIN           reduce using rule 19 (EXPR -> STRING .)
    CHARACTER       reduce using rule 19 (EXPR -> STRING .)
    DOLLAR          reduce using rule 19 (EXPR -> STRING .)
    INPUT_FILE      reduce using rule 19 (EXPR -> STRING .)
    OUTPUT_FILE     reduce using rule 19 (EXPR -> STRING .)
    LEFT_BRACE      reduce using rule 19 (EXPR -> STRING .)
    BOLD            reduce using rule 19 (EXPR -> STRING .)
    MONOSPACE       reduce using rule 19 (EXPR -> STRING .)
    ITALIC          reduce using rule 19 (EXPR -> STRING .)
    UNDERSCORE      reduce using rule 19 (EXPR -> STRING .)
    $end            reduce using rule 19 (EXPR -> STRING .)
    RIGHT_BRACE     reduce using rule 19 (EXPR -> STRING .)


state 6

    (20) EXPR -> PHRASE .

    BEGIN           reduce using rule 20 (EXPR -> PHRASE .)
    CHARACTER       reduce using rule 20 (EXPR -> PHRASE .)
    DOLLAR          reduce using rule 20 (EXPR -> PHRASE .)
    INPUT_FILE      reduce using rule 20 (EXPR -> PHRASE .)
    OUTPUT_FILE     reduce using rule 20 (EXPR -> PHRASE .)
    LEFT_BRACE      reduce using rule 20 (EXPR -> PHRASE .)
    BOLD            reduce using rule 20 (EXPR -> PHRASE .)
    MONOSPACE       reduce using rule 20 (EXPR -> PHRASE .)
    ITALIC          reduce using rule 20 (EXPR -> PHRASE .)
    UNDERSCORE      reduce using rule 20 (EXPR -> PHRASE .)
    $end            reduce using rule 20 (EXPR -> PHRASE .)
    RIGHT_BRACE     reduce using rule 20 (EXPR -> PHRASE .)


state 7

    (21) EXPR -> MATH .

    BEGIN           reduce using rule 21 (EXPR -> MATH .)
    CHARACTER       reduce using rule 21 (EXPR -> MATH .)
    DOLLAR          reduce using rule 21 (EXPR -> MATH .)
    INPUT_FILE      reduce using rule 21 (EXPR -> MATH .)
    OUTPUT_FILE     reduce using rule 21 (EXPR -> MATH .)
    LEFT_BRACE      reduce using rule 21 (EXPR -> MATH .)
    BOLD            reduce using rule 21 (EXPR -> MATH .)
    MONOSPACE       reduce using rule 21 (EXPR -> MATH .)
    ITALIC          reduce using rule 21 (EXPR -> MATH .)
    UNDERSCORE      reduce using rule 21 (EXPR -> MATH .)
    $end            reduce using rule 21 (EXPR -> MATH .)
    RIGHT_BRACE     reduce using rule 21 (EXPR -> MATH .)


state 8

    (22) EXPR -> INPUT_FILE_EXPR .

    BEGIN           reduce using rule 22 (EXPR -> INPUT_FILE_EXPR .)
    CHARACTER       reduce using rule 22 (EXPR -> INPUT_FILE_EXPR .)
    DOLLAR          reduce using rule 22 (EXPR -> INPUT_FILE_EXPR .)
    INPUT_FILE      reduce using rule 22 (EXPR -> INPUT_FILE_EXPR .)
    OUTPUT_FILE     reduce using rule 22 (EXPR -> INPUT_FILE_EXPR .)
    LEFT_BRACE      reduce using rule 22 (EXPR -> INPUT_FILE_EXPR .)
    BOLD            reduce using rule 22 (EXPR -> INPUT_FILE_EXPR .)
    MONOSPACE       reduce using rule 22 (EXPR -> INPUT_FILE_EXPR .)
    ITALIC          reduce using rule 22 (EXPR -> INPUT_FILE_EXPR .)
    UNDERSCORE      reduce using rule 22 (EXPR -> INPUT_FILE_EXPR .)
    $end            reduce using rule 22 (EXPR -> INPUT_FILE_EXPR .)
    RIGHT_BRACE     reduce using rule 22 (EXPR -> INPUT_FILE_EXPR .)


state 9

    (23) EXPR -> OUTPUT_FILE_EXPR .

    BEGIN           reduce using rule 23 (EXPR -> OUTPUT_FILE_EXPR .)
    CHARACTER       reduce using rule 23 (EXPR -> OUTPUT_FILE_EXPR .)
    DOLLAR          reduce using rule 23 (EXPR -> OUTPUT_FILE_EXPR .)
    INPUT_FILE      reduce using rule 23 (EXPR -> OUTPUT_FILE_EXPR .)
    OUTPUT_FILE     reduce using rule 23 (EXPR -> OUTPUT_FILE_EXPR .)
    LEFT_BRACE      reduce using rule 23 (EXPR -> OUTPUT_FILE_EXPR .)
    BOLD            reduce using rule 23 (EXPR -> OUTPUT_FILE_EXPR .)
    MONOSPACE       reduce using rule 23 (EXPR -> OUTPUT_FILE_EXPR .)
    ITALIC          reduce using rule 23 (EXPR -> OUTPUT_FILE_EXPR .)
    UNDERSCORE      reduce using rule 23 (EXPR -> OUTPUT_FILE_EXPR .)
    $end            reduce using rule 23 (EXPR -> OUTPUT_FILE_EXPR .)
    RIGHT_BRACE     reduce using rule 23 (EXPR -> OUTPUT_FILE_EXPR .)


state 10

    (24) BEGIN_EXPR -> BEGIN . BRACE_PHRASE_LIST_FOR_BEGIN
    (27) BRACE_PHRASE_LIST_FOR_BEGIN -> . BRACE_PHRASE BRACE_PHRASE
    (28) BRACE_PHRASE_LIST_FOR_BEGIN -> . BRACE_PHRASE BRACE_PHRASE BRACE_PHRASE_LIST_FOR_BEGIN
    (10) BRACE_PHRASE -> . LEFT_BRACE EXPR RIGHT_BRACE

    LEFT_BRACE      shift and go to state 20

    BRACE_PHRASE_LIST_FOR_BEGIN    shift and go to state 27
    BRACE_PHRASE                   shift and go to state 28

state 11

    (2) STRING -> CHARACTER .
    (3) STRING -> CHARACTER . STRING
    (4) PHRASE -> CHARACTER .
    (2) STRING -> . CHARACTER
    (3) STRING -> . CHARACTER STRING

  ! reduce/reduce conflict for BEGIN resolved using rule 2 (STRING -> CHARACTER .)
  ! reduce/reduce conflict for CHARACTER resolved using rule 2 (STRING -> CHARACTER .)
  ! reduce/reduce conflict for DOLLAR resolved using rule 2 (STRING -> CHARACTER .)
  ! reduce/reduce conflict for INPUT_FILE resolved using rule 2 (STRING -> CHARACTER .)
  ! reduce/reduce conflict for OUTPUT_FILE resolved using rule 2 (STRING -> CHARACTER .)
  ! reduce/reduce conflict for LEFT_BRACE resolved using rule 2 (STRING -> CHARACTER .)
  ! reduce/reduce conflict for BOLD resolved using rule 2 (STRING -> CHARACTER .)
  ! reduce/reduce conflict for MONOSPACE resolved using rule 2 (STRING -> CHARACTER .)
  ! reduce/reduce conflict for ITALIC resolved using rule 2 (STRING -> CHARACTER .)
  ! reduce/reduce conflict for UNDERSCORE resolved using rule 2 (STRING -> CHARACTER .)
  ! reduce/reduce conflict for $end resolved using rule 2 (STRING -> CHARACTER .)
  ! reduce/reduce conflict for RIGHT_BRACE resolved using rule 2 (STRING -> CHARACTER .)
  ! shift/reduce conflict for CHARACTER resolved as shift
    BEGIN           reduce using rule 2 (STRING -> CHARACTER .)
    DOLLAR          reduce using rule 2 (STRING -> CHARACTER .)
    INPUT_FILE      reduce using rule 2 (STRING -> CHARACTER .)
    OUTPUT_FILE     reduce using rule 2 (STRING -> CHARACTER .)
    LEFT_BRACE      reduce using rule 2 (STRING -> CHARACTER .)
    BOLD            reduce using rule 2 (STRING -> CHARACTER .)
    MONOSPACE       reduce using rule 2 (STRING -> CHARACTER .)
    ITALIC          reduce using rule 2 (STRING -> CHARACTER .)
    UNDERSCORE      reduce using rule 2 (STRING -> CHARACTER .)
    $end            reduce using rule 2 (STRING -> CHARACTER .)
    RIGHT_BRACE     reduce using rule 2 (STRING -> CHARACTER .)
    CHARACTER       shift and go to state 29

  ! CHARACTER       [ reduce using rule 2 (STRING -> CHARACTER .) ]
  ! BEGIN           [ reduce using rule 4 (PHRASE -> CHARACTER .) ]
  ! CHARACTER       [ reduce using rule 4 (PHRASE -> CHARACTER .) ]
  ! DOLLAR          [ reduce using rule 4 (PHRASE -> CHARACTER .) ]
  ! INPUT_FILE      [ reduce using rule 4 (PHRASE -> CHARACTER .) ]
  ! OUTPUT_FILE     [ reduce using rule 4 (PHRASE -> CHARACTER .) ]
  ! LEFT_BRACE      [ reduce using rule 4 (PHRASE -> CHARACTER .) ]
  ! BOLD            [ reduce using rule 4 (PHRASE -> CHARACTER .) ]
  ! MONOSPACE       [ reduce using rule 4 (PHRASE -> CHARACTER .) ]
  ! ITALIC          [ reduce using rule 4 (PHRASE -> CHARACTER .) ]
  ! UNDERSCORE      [ reduce using rule 4 (PHRASE -> CHARACTER .) ]
  ! $end            [ reduce using rule 4 (PHRASE -> CHARACTER .) ]
  ! RIGHT_BRACE     [ reduce using rule 4 (PHRASE -> CHARACTER .) ]

    STRING                         shift and go to state 30

state 12

    (5) PHRASE -> BRACE_PHRASE .

    BEGIN           reduce using rule 5 (PHRASE -> BRACE_PHRASE .)
    CHARACTER       reduce using rule 5 (PHRASE -> BRACE_PHRASE .)
    DOLLAR          reduce using rule 5 (PHRASE -> BRACE_PHRASE .)
    INPUT_FILE      reduce using rule 5 (PHRASE -> BRACE_PHRASE .)
    OUTPUT_FILE     reduce using rule 5 (PHRASE -> BRACE_PHRASE .)
    LEFT_BRACE      reduce using rule 5 (PHRASE -> BRACE_PHRASE .)
    BOLD            reduce using rule 5 (PHRASE -> BRACE_PHRASE .)
    MONOSPACE       reduce using rule 5 (PHRASE -> BRACE_PHRASE .)
    ITALIC          reduce using rule 5 (PHRASE -> BRACE_PHRASE .)
    UNDERSCORE      reduce using rule 5 (PHRASE -> BRACE_PHRASE .)
    $end            reduce using rule 5 (PHRASE -> BRACE_PHRASE .)
    RIGHT_BRACE     reduce using rule 5 (PHRASE -> BRACE_PHRASE .)


state 13

    (6) PHRASE -> BOLD_PHRASE .

    BEGIN           reduce using rule 6 (PHRASE -> BOLD_PHRASE .)
    CHARACTER       reduce using rule 6 (PHRASE -> BOLD_PHRASE .)
    DOLLAR          reduce using rule 6 (PHRASE -> BOLD_PHRASE .)
    INPUT_FILE      reduce using rule 6 (PHRASE -> BOLD_PHRASE .)
    OUTPUT_FILE     reduce using rule 6 (PHRASE -> BOLD_PHRASE .)
    LEFT_BRACE      reduce using rule 6 (PHRASE -> BOLD_PHRASE .)
    BOLD            reduce using rule 6 (PHRASE -> BOLD_PHRASE .)
    MONOSPACE       reduce using rule 6 (PHRASE -> BOLD_PHRASE .)
    ITALIC          reduce using rule 6 (PHRASE -> BOLD_PHRASE .)
    UNDERSCORE      reduce using rule 6 (PHRASE -> BOLD_PHRASE .)
    $end            reduce using rule 6 (PHRASE -> BOLD_PHRASE .)
    RIGHT_BRACE     reduce using rule 6 (PHRASE -> BOLD_PHRASE .)


state 14

    (7) PHRASE -> MONOSPACE_PHRASE .

    BEGIN           reduce using rule 7 (PHRASE -> MONOSPACE_PHRASE .)
    CHARACTER       reduce using rule 7 (PHRASE -> MONOSPACE_PHRASE .)
    DOLLAR          reduce using rule 7 (PHRASE -> MONOSPACE_PHRASE .)
    INPUT_FILE      reduce using rule 7 (PHRASE -> MONOSPACE_PHRASE .)
    OUTPUT_FILE     reduce using rule 7 (PHRASE -> MONOSPACE_PHRASE .)
    LEFT_BRACE      reduce using rule 7 (PHRASE -> MONOSPACE_PHRASE .)
    BOLD            reduce using rule 7 (PHRASE -> MONOSPACE_PHRASE .)
    MONOSPACE       reduce using rule 7 (PHRASE -> MONOSPACE_PHRASE .)
    ITALIC          reduce using rule 7 (PHRASE -> MONOSPACE_PHRASE .)
    UNDERSCORE      reduce using rule 7 (PHRASE -> MONOSPACE_PHRASE .)
    $end            reduce using rule 7 (PHRASE -> MONOSPACE_PHRASE .)
    RIGHT_BRACE     reduce using rule 7 (PHRASE -> MONOSPACE_PHRASE .)


state 15

    (8) PHRASE -> ITALIC_PHRASE .

    BEGIN           reduce using rule 8 (PHRASE -> ITALIC_PHRASE .)
    CHARACTER       reduce using rule 8 (PHRASE -> ITALIC_PHRASE .)
    DOLLAR          reduce using rule 8 (PHRASE -> ITALIC_PHRASE .)
    INPUT_FILE      reduce using rule 8 (PHRASE -> ITALIC_PHRASE .)
    OUTPUT_FILE     reduce using rule 8 (PHRASE -> ITALIC_PHRASE .)
    LEFT_BRACE      reduce using rule 8 (PHRASE -> ITALIC_PHRASE .)
    BOLD            reduce using rule 8 (PHRASE -> ITALIC_PHRASE .)
    MONOSPACE       reduce using rule 8 (PHRASE -> ITALIC_PHRASE .)
    ITALIC          reduce using rule 8 (PHRASE -> ITALIC_PHRASE .)
    UNDERSCORE      reduce using rule 8 (PHRASE -> ITALIC_PHRASE .)
    $end            reduce using rule 8 (PHRASE -> ITALIC_PHRASE .)
    RIGHT_BRACE     reduce using rule 8 (PHRASE -> ITALIC_PHRASE .)


state 16

    (9) PHRASE -> UNDERSCORE_PHRASE .

    BEGIN           reduce using rule 9 (PHRASE -> UNDERSCORE_PHRASE .)
    CHARACTER       reduce using rule 9 (PHRASE -> UNDERSCORE_PHRASE .)
    DOLLAR          reduce using rule 9 (PHRASE -> UNDERSCORE_PHRASE .)
    INPUT_FILE      reduce using rule 9 (PHRASE -> UNDERSCORE_PHRASE .)
    OUTPUT_FILE     reduce using rule 9 (PHRASE -> UNDERSCORE_PHRASE .)
    LEFT_BRACE      reduce using rule 9 (PHRASE -> UNDERSCORE_PHRASE .)
    BOLD            reduce using rule 9 (PHRASE -> UNDERSCORE_PHRASE .)
    MONOSPACE       reduce using rule 9 (PHRASE -> UNDERSCORE_PHRASE .)
    ITALIC          reduce using rule 9 (PHRASE -> UNDERSCORE_PHRASE .)
    UNDERSCORE      reduce using rule 9 (PHRASE -> UNDERSCORE_PHRASE .)
    $end            reduce using rule 9 (PHRASE -> UNDERSCORE_PHRASE .)
    RIGHT_BRACE     reduce using rule 9 (PHRASE -> UNDERSCORE_PHRASE .)


state 17

    (29) MATH -> DOLLAR . MATH_STRING DOLLAR
    (30) MATH_STRING -> . STRING
    (31) MATH_STRING -> . UNDERSCORE
    (32) MATH_STRING -> . MATH_STRING MATH_STRING
    (2) STRING -> . CHARACTER
    (3) STRING -> . CHARACTER STRING

    UNDERSCORE      shift and go to state 33
    CHARACTER       shift and go to state 29

    MATH_STRING                    shift and go to state 31
    STRING                         shift and go to state 32

state 18

    (25) INPUT_FILE_EXPR -> INPUT_FILE .

    BEGIN           reduce using rule 25 (INPUT_FILE_EXPR -> INPUT_FILE .)
    CHARACTER       reduce using rule 25 (INPUT_FILE_EXPR -> INPUT_FILE .)
    DOLLAR          reduce using rule 25 (INPUT_FILE_EXPR -> INPUT_FILE .)
    INPUT_FILE      reduce using rule 25 (INPUT_FILE_EXPR -> INPUT_FILE .)
    OUTPUT_FILE     reduce using rule 25 (INPUT_FILE_EXPR -> INPUT_FILE .)
    LEFT_BRACE      reduce using rule 25 (INPUT_FILE_EXPR -> INPUT_FILE .)
    BOLD            reduce using rule 25 (INPUT_FILE_EXPR -> INPUT_FILE .)
    MONOSPACE       reduce using rule 25 (INPUT_FILE_EXPR -> INPUT_FILE .)
    ITALIC          reduce using rule 25 (INPUT_FILE_EXPR -> INPUT_FILE .)
    UNDERSCORE      reduce using rule 25 (INPUT_FILE_EXPR -> INPUT_FILE .)
    $end            reduce using rule 25 (INPUT_FILE_EXPR -> INPUT_FILE .)
    RIGHT_BRACE     reduce using rule 25 (INPUT_FILE_EXPR -> INPUT_FILE .)


state 19

    (26) OUTPUT_FILE_EXPR -> OUTPUT_FILE .
